--- a/public/package.json
+++ b/public/package.json
@@ -14,7 +14,11 @@
     "resizable": true
   },
   "dependencies": {
+    "browser-sync": "^2.13.0",
+    "browserify": "^13.0.1",
     "chokidar": "1.0.5",
+    "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^1.6.0",
     "node-static": "0.7.6",
     "p5.serialserver": "0.0.20",
     "portscanner": "1.0.0",
@@ -22,6 +26,8 @@
     "semver": "~3.0.1",
     "serialport": "git://github.com/julianduque/node-serialport.git#master",
     "trash": "~0.1.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "wrench": "~1.5.8"
   },
   "devDependencies": {
